tests/negative/question_on_non_result.glyph
module neg

import std/result { Result, Ok }

fn use_it(n: number) -> Result<number, string> {
  let x = n?
  return Ok(x)
}
